@@ -42,7 +42,7 @@ add_global_arguments('-I' + get_option('spdlog_include_dir'), language : 'cpp')
 inc_dir = include_directories(['include',
                                 get_option('cli11_include_dir'),
                                 get_option('spdlog_include_dir'),
-#                               get_option('json_include_dir'),
+                                get_option('json_include_dir'),
                                 get_option('tabulate_include_dir')                           
                               ])
 
